--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -26,7 +26,7 @@
                 android:padding="10dp"
                 android:text="@string/event_name"
                 android:textAlignment="textEnd"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -55,7 +55,7 @@
                 android:padding="10dp"
                 android:text="@string/event_date"
                 android:textAlignment="textEnd"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -74,6 +74,17 @@
                 android:textStyle="bold"
                 tools:ignore="SpeakableTextPresentCheck" />
 
+            <ImageButton
+                android:id="@+id/idSelectDateBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/date_picker_button_selector"
+                android:contentDescription="@string/create"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:scaleType="fitCenter"
+                app:srcCompat="@android:drawable/ic_menu_my_calendar" />
+
         </TableRow>
 
         <TableRow
@@ -88,7 +99,7 @@
                 android:padding="10dp"
                 android:text="@string/event_venue"
                 android:textAlignment="textEnd"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
@@ -117,7 +128,7 @@
                 android:padding="10dp"
                 android:text="@string/event_desc"
                 android:textAlignment="textEnd"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
