--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -13,7 +13,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingRight="10dp">
 
         <!--Text View to display event name-->
 
@@ -21,8 +24,6 @@
             android:id="@+id/idEventName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:text="@string/event_name"
             android:textColor="@color/black"
             android:textSize="20sp"
@@ -34,11 +35,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/idEventName"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:text="@string/event_venue"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <!--Text View to display event date-->
@@ -47,11 +46,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/idEventVenue"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
             android:text="@string/event_desc"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
@@ -63,8 +60,9 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:drawablePadding="2dp"
-            android:text="@string/event_date" />
-            <!--app:drawableStartCompat="@drawable/ic_star" -->
+            android:text="@string/event_date"
+            android:textAlignment="viewEnd" />
+        <!--app:drawableStartCompat="@drawable/ic_star" -->
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
